fix: purchase section peek text align

--- a/src/sass/_common/reskin.scss
+++ b/src/sass/_common/reskin.scss
@@ -287,6 +287,7 @@ div#purchase_container {
 
                     .mask {
                         font-size: 10px;
+                        text-align: center;
                     }
                     .digit {
                         &.digit-winning {
